CSS and script.js adjusts to resolve spacing issues on Structure pages

--- a/amani/themes/amani_zen/sass/theme/_layout.scss
+++ b/amani/themes/amani_zen/sass/theme/_layout.scss
@@ -77,7 +77,6 @@ div.breadcrumb {
 			line-height:1.4em;
 			color:$blue;
 			font-weight:300;
-			margin-bottom:2em;
 		}
 
 		.paragraphs-items-field-paragraphs {
@@ -223,9 +222,9 @@ div.breadcrumb {
 		}
 		
 		.paragraphs-item-link-block-blue {
-			margin-top:3em;
 			display:block;
 			float:left;
+			margin-top:1em;
 			a {
 				color:white;
 				background:$blue;
@@ -251,7 +250,7 @@ div.breadcrumb {
 		}
 		
 		.paragraphs-item-link-block-grey {
-			margin-top:3em;
+			margin-top:1em;
 			display:block;
 			float:left;
 			a {
